(DOCSP-11948): Web Phase 2 (no watch) (#69)
* Delete old web code

* Scaffold v2 Web Tutorial

* Install dependencies

* (DOCSP-11948): Web Phase 2 (no watch)

* (DOCSP-11948): useProjectActions() -> useTaskMutations()

* (DOCSP-11948): Remove refresh() in favor of Apollo cache updates + polish

* (DOCSP-11948): Cancel adding a new task, prevent tasks without text

* (DOCSP-11948): fix errors, remove commented code/unused files, clean up UX

* (DOCSP-11948): Fix login context error

* (DOCSP-11948): Add loading indicators to the login & tasks screens

* (DOCSP-11948): Add error notification for unknown email addresses

* (DOCSP-11948): Add an empty state for TaskList

* (DOCSP-11948): Polish styles for selected/draft task action buttons

* (DOCSP-11948): Encapsulate app.currentUser state

* (DOCSP-11948): Small style tweaks

* (DOCSP-11948): Note that "My Project" is the default

Co-authored-by: Mohammad Hunan Chughtai <mohammad.hunan@10gen.com>

* (DOCSP-11948): Add note to clarify effect hook

Co-authored-by: Mohammad Hunan Chughtai <mohammad.hunan@10gen.com>

* (DOCSP-11948): Add explanatory comments

* (DOCSP-11948): Fix function error handling

* (DOCSP-11948): Make remove team member buttons more accessible

* (DOCSP-11948): Tweak manage permissions text

* (DOCSP-11948): Move StatusBadge to its own module

* (DOCSP-11948): Polish styles for selected/draft task action buttons

* (DOCSP-11948): Add & run Prettier

* (DOCSP-11948): Remove extraneous comment

Co-authored-by: Mohammad Hunan Chughtai <mohammad.hunan@10gen.com>

* (DOCSP-11948): Remove extraneous comment

Co-authored-by: Mohammad Hunan Chughtai <mohammad.hunan@10gen.com>

* (DOCSP-11948): Add explanatory comments for wrapped auth functions/state

Co-authored-by: Mohammad Hunan Chughtai <mohammad.hunan@10gen.com>

--- a/web/package.json
+++ b/web/package.json
@@ -3,49 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.1.0",
-    "@emotion/core": "^10.0.28",
+    "@apollo/client": "^3.1.4",
+    "@emotion/core": "^10.0.35",
     "@emotion/styled": "^10.0.27",
-    "@graphql-codegen/import-types-preset": "^1.14.0",
-    "@graphql-codegen/typescript-react-apollo": "^1.14.0",
-    "@leafygreen-ui/button": "^4.2.3",
-    "@leafygreen-ui/card": "^3.0.0",
-    "@leafygreen-ui/modal": "^3.0.4",
-    "@leafygreen-ui/palette": "^2.0.1",
-    "@leafygreen-ui/text-input": "^1.1.0",
+    "@leafygreen-ui/badge": "^3.0.2",
+    "@leafygreen-ui/button": "^6.0.2",
+    "@leafygreen-ui/card": "^4.1.0",
+    "@leafygreen-ui/icon": "^6.6.0",
+    "@leafygreen-ui/icon-button": "^8.0.0",
+    "@leafygreen-ui/leafygreen-provider": "^1.1.4",
+    "@leafygreen-ui/modal": "^4.1.0",
+    "@leafygreen-ui/palette": "^2.0.2",
+    "@leafygreen-ui/text-input": "^3.0.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "@types/bson": "^4.0.2",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.12.38",
-    "@types/ramda": "^0.27.5",
-    "@types/react": "^16.9.0",
-    "@types/react-beautiful-dnd": "^12.1.2",
-    "@types/react-dom": "^16.9.7",
-    "@types/validator": "^13.0.0",
-    "array-move": "^2.2.1",
-    "bson": "^4.0.4",
-    "framer-motion": "^1.10.3",
-    "graphql": "^15.0.0",
-    "graphql-tag": "^2.10.3",
-    "install": "^0.13.0",
-    "npm": "^6.14.5",
-    "ramda": "^0.27.0",
+    "graphql": "^15.3.0",
+    "graphql-tag": "^2.11.0",
     "react": "^16.13.1",
-    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
-    "realm-web": "^0.7.0",
-    "typescript": "~3.7.2",
-    "validator": "^13.0.0"
+    "react-scripts": "3.4.3",
+    "react-spinners": "^0.9.0",
+    "realm-web": "^0.8.1",
+    "validator": "^13.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "generate": "graphql-codegen"
+    "format": "prettier --write \"**/*.js\"",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -63,9 +50,6 @@
     ]
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^1.14.0",
-    "@graphql-codegen/typescript": "^1.14.0",
-    "@graphql-codegen/typescript-operations": "^1.14.0",
-    "graphql.macro": "^1.4.2"
+    "prettier": "^2.1.2"
   }
 }
